test/scc/decl/semantic-errors/075.a
075.t:3:18: error: field 'a' declared with storage specifier